Bug 365704 - Not right security type. Shows WPA-PSK when it should be WPA2-PSK
Summary: Not right security type. Shows WPA-PSK when it should be WPA2-PSK
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Debian testing Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-15 05:17 UTC by john.kirk
Modified: 2024-12-23 18:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description john.kirk 2016-07-15 05:17:02 UTC
Dear Developer, 

The widget shows WPA-PSK security type after connecting to wireless network. It shows that in the Details and in the available connections after disconnection. 

Before first connection it shows the right type in the available connections.

Best wishes, 
John 

Reproducible: Always

Steps to Reproduce:
1. Look at  security type in available connections of the suggested connection. 
2. Connect first time. Look at security type in the Details.
3. Disconnect. And look at it in available connections.  


Expected Results:  
It should be WPA2-PSK. Kde4 shows it right. 

Thank you.
Comment 1 Jan Grulich 2016-07-19 13:10:50 UTC
Git commit 22395ab1022ef6f900e6bd8b04fd3f3d0ba026f3 by Jan Grulich.
Committed on 19/07/2016 at 13:10.
Pushed by grulich into branch 'master'.

Update security type from wireless network when merging with connection

M  +11   -2    libs/models/networkmodel.cpp
M  +1    -1    libs/models/networkmodel.h

http://commits.kde.org/plasma-nm/22395ab1022ef6f900e6bd8b04fd3f3d0ba026f3
Comment 2 Jan Grulich 2016-07-19 13:11:47 UTC
Git commit c647ea09380cd3e1f3f80d4ee293b9bc8480f79a by Jan Grulich.
Committed on 19/07/2016 at 13:11.
Pushed by grulich into branch 'Plasma/5.7'.

Update security type from wireless network when merging with connection

M  +11   -2    libs/models/networkmodel.cpp
M  +1    -1    libs/models/networkmodel.h

http://commits.kde.org/plasma-nm/c647ea09380cd3e1f3f80d4ee293b9bc8480f79a
Comment 3 Ben Cooksley 2024-12-23 18:25:46 UTC
Bulk transfer as requested in T17796