Update security type from wireless network when merging with connection

BUG:365704